src/styles.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

body {
    margin: 0;
    background-color: #12001a;
    color: #fff;
}
* {
    font-family: "Roboto", Helvetica, Arial, sans-serif;
}
// *:focus {
//     box-shadow: 0.063rem 0 1rem 0 gold;
// }

h2 {
    justify-self: center;
}

label {
    display: flex;
    flex-direction: column;
    row-gap: 0.3rem;
    width: fit-content;
}

input,
select,
textarea {
    padding: 0 0.5rem 0 0.5rem;
    background-color: #1b00205d;
    border: 1px ridge gold;
    font-size: 1rem;
    line-height: 1.5rem;
    color: #fff;
    border-radius: 1rem;
}

textarea {
    height: 6rem;
    padding: 0.5rem;
}

label:has(textarea) {
    width: 100%;
}

select {
    padding: 0;
    text-align: center;
    cursor: pointer;
    width: 10rem;
    max-width: 100%;
}

select:focus {
    border-bottom-left-radius: 0rem;
    border-bottom-right-radius: 0rem;
}

small {
    font-size: 0.65rem;
    white-space: nowrap;
    text-align: center;
}

button {
    width: fit-content;
    height: 2rem;

    padding: 0.5rem 2rem 0.5rem 2rem;

    color: #fff;
    background-color: rgba(255, 217, 0, 0.253);

    border: none;

    white-space: nowrap;

    transition: background-color 0.2s ease-in-out;

    cursor: pointer;
    &:hover {
        background-color: rgba(255, 217, 0, 0.397);
    }

    &:active {
        background-color: rgba(255, 217, 0, 0.685);
    }
    &:disabled {
        background-color: rgba(255, 217, 0, 0.103);
        cursor: default;
    }
}

.pagination-controls {
    max-width: fit-content;
    width: 90%;
    margin: 0 auto;
    margin-top: 2rem;
    display: flex;
    align-items: center;
    justify-content: space-evenly;

    white-space: nowrap;
    height: 2rem;
    border-radius: 1rem;
    box-shadow: 0.063rem 0 1.25rem 0 gold;

    button {
        flex: 1;

        display: flex;
        justify-content: center;
        align-items: center;
    }

    p {
        height: 2rem;
        padding: 0 1rem 0 1rem;
        display: flex;
        align-items: center;

        background-color: rgba(255, 217, 0, 0.253);
        border-left: none;
        border-right: none;
    }

    .previous {
        border-top-left-radius: 1rem;
        border-bottom-left-radius: 1rem;
    }

    .next {
        border-top-right-radius: 1rem;
        border-bottom-right-radius: 1rem;
    }
}

.back {
    border-radius: 1rem;
    font-size: 1rem;
}

.timestamp {
    font-size: 0.7rem;
}

.container {
    padding-top: 6rem;
    width: 55rem;
    max-width: 95%;
    margin: 0 auto;

    .frame {
        padding: 1.5rem;
        border-radius: 1rem;
        background-color: #1b0020bb;
        box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
    }
}

.filter {
    margin-top: 1rem;

    display: flex;
    flex-wrap: wrap;
    gap: 1rem;

    select {
        width: 10rem;
        max-width: 95%;
    }
}

.loading {
    text-align: center;
    align-self: top;
}

form {
    max-width: 500px;
    margin: 0 auto;
    margin-top: 2rem;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.switch {
    display: flex;
    justify-content: center;

    .left-button {
        border-top-left-radius: 1rem;
        border-bottom-left-radius: 1rem;
    }

    .right-button {
        border-top-right-radius: 1rem;
        border-bottom-right-radius: 1rem;
    }

    .active {
        background-color: rgba(255, 217, 0, 0.685) !important;
        box-shadow: 0.063rem 0 1.25rem 0 gold;
    }
}

.normal-list {
    margin-top: 1rem;

    display: flex;
    flex-direction: column;
    row-gap: 1rem;
    min-height: 58rem;
    background-color: #1b00205b;

    .item {
        position: relative;

        display: grid;
        grid-template-columns: 100px auto;
        gap: 0.5rem;

        background-color: #1b002000;
        border: 1px ridge gold;
        border-radius: 1rem;

        transition: background-color 0.2s ease-in-out;
    }

    .image-holder {
        grid-area: 1/1/3/2;
        max-width: 100px;
        width: 75%;
        aspect-ratio: 1/1;
        margin: auto;

        overflow: hidden;

        border-radius: 1rem;

        img {
            width: 100%;
            height: auto;
        }
    }

    .header-desc {
        grid-area: 1/2/2/3;
        padding: 2.5rem 1rem 0rem 1rem;
    }

    .actions {
        grid-area: 2/1/3/3;
    }
}
.normal-list::-webkit-scrollbar {
    display: none;
}

